# mplabs-tts-generator

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: README.md  batch_input.json  batch_with_plugin.py  synth_single.py
scripts/: download_models.py
src/mplabs_tts/: __init__.py  cli.py
src/mplabs_tts/core/: __init__.py  batch.py  models.py  normalizer.py  pipeline.py  prosody.py  synthesizer.py
src/mplabs_tts/languages/: __init__.py  base.py
src/mplabs_tts/languages/pt_br/: __init__.py  accents.py  numbers.py  pronunciation.py  prosody.py
src/mplabs_tts/plugins/: __init__.py  base.py  coconut3301.py  medical_ptbr.py
tests/: test_normalizer.py  test_pipeline.py  test_pt_br_accents.py  test_pt_br_numbers.py  test_pt_br_pronunciation.py
voices/: README.md
