[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mplabs-tts"
version = "0.1.0"
description = "Generic, plugin-based pt-BR-first TTS pipeline built on F5-TTS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marcel Piva" }]
keywords = ["tts", "text-to-speech", "f5-tts", "pt-br", "portuguese", "voice-cloning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "f5-tts",
    "soundfile",
    "numpy",
    "pydub",
    "click>=8.1",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
mplabs-tts = "mplabs_tts.cli:cli"

[project.urls]
Homepage = "https://github.com/marcelpiva/mplabs-tts-generator"
Issues = "https://github.com/marcelpiva/mplabs-tts-generator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mplabs_tts = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
